[package]
name = "pms5003"
version = "0.1.0"
authors = ["shutton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
anyhow = "1.0.32"
bincode = "1.3.1"
actix = "~0.9"
bytes = "0.5.6"
actix-web = "3.0.2"
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.7.1"
actix-rt = "1.1.1"
aqi = "0.1.0"

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.tokio]
version = "0.2.22"
features = ["full"]
